--- a/Splatt/Splatt.vcxproj
+++ b/Splatt/Splatt.vcxproj
@@ -159,11 +159,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Aste_asteroids.cpp" />
+    <ClCompile Include="Aste_Enemies.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="StateManager.cpp" />
     <ClCompile Include="Tools.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Aste_asteroids.h" />
+    <ClInclude Include="Aste_Enemies.h" />
     <ClInclude Include="StateManager.hpp" />
     <ClInclude Include="Tools.hpp" />
   </ItemGroup>
