--- a/Splatt/Splatt.vcxproj
+++ b/Splatt/Splatt.vcxproj
@@ -159,15 +159,21 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Aste_asteroids.cpp" />
+    <ClCompile Include="Aste_Asteroid.cpp" />
+    <ClCompile Include="Aste_BigSaucer.cpp" />
     <ClCompile Include="Aste_Enemies.cpp" />
+    <ClCompile Include="Aste_Player.cpp" />
+    <ClCompile Include="Aste_SmallSaucer.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="StateManager.cpp" />
     <ClCompile Include="Tools.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Aste_asteroids.h" />
+    <ClInclude Include="Aste_Asteroid.h" />
+    <ClInclude Include="Aste_BigSaucer.h" />
     <ClInclude Include="Aste_Enemies.h" />
+    <ClInclude Include="Aste_Player.h" />
+    <ClInclude Include="Aste_SmallSaucer.h" />
     <ClInclude Include="StateManager.hpp" />
     <ClInclude Include="Tools.hpp" />
   </ItemGroup>
