--- a/Splatt/Splatt.vcxproj
+++ b/Splatt/Splatt.vcxproj
@@ -166,6 +166,8 @@
     <ClCompile Include="Aste_Player.cpp" />
     <ClCompile Include="Aste_Shoot.cpp" />
     <ClCompile Include="Aste_SmallSaucer.cpp" />
+    <ClCompile Include="Lunar_manager.cpp" />
+    <ClCompile Include="Lunar_player.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="StateManager.cpp" />
     <ClCompile Include="Tools.cpp" />
@@ -178,6 +180,8 @@
     <ClInclude Include="Aste_Player.h" />
     <ClInclude Include="Aste_Shoot.h" />
     <ClInclude Include="Aste_SmallSaucer.h" />
+    <ClInclude Include="Lunar_manager.h" />
+    <ClInclude Include="Lunar_player.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="StateManager.hpp" />
     <ClInclude Include="Tools.hpp" />
