--- a/Splatt/Splatt.vcxproj
+++ b/Splatt/Splatt.vcxproj
@@ -166,9 +166,14 @@
     <ClCompile Include="Aste_Player.cpp" />
     <ClCompile Include="Aste_Shoot.cpp" />
     <ClCompile Include="Aste_SmallSaucer.cpp" />
-    <ClCompile Include="Lunar_manager.cpp" />
-    <ClCompile Include="Lunar_player.cpp" />
     <ClCompile Include="Main.cpp" />
+	<ClCompile Include="Lunar_manager.cpp" />
+    <ClCompile Include="Lunar_player.cpp" />
+    <ClCompile Include="Pac_Bonus.cpp" />
+    <ClCompile Include="Pac_Fantomes.cpp" />
+    <ClCompile Include="Pac_Gum.cpp" />
+    <ClCompile Include="Pac_Personnage.cpp" />
+    <ClCompile Include="Perso_Pacman.cpp" />
     <ClCompile Include="StateManager.cpp" />
     <ClCompile Include="Tools.cpp" />
   </ItemGroup>
@@ -180,9 +185,14 @@
     <ClInclude Include="Aste_Player.h" />
     <ClInclude Include="Aste_Shoot.h" />
     <ClInclude Include="Aste_SmallSaucer.h" />
-    <ClInclude Include="Lunar_manager.h" />
+	<ClInclude Include="Lunar_manager.h" />
     <ClInclude Include="Lunar_player.h" />
+    <ClInclude Include="Pac_Bonus.h" />
+    <ClInclude Include="Pac_Fantomes.h" />
+    <ClInclude Include="Pac_Gum.h" />
+    <ClInclude Include="Pac_Personnage.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="Perso_Pacman.h" />
     <ClInclude Include="StateManager.hpp" />
     <ClInclude Include="Tools.hpp" />
   </ItemGroup>
