--- a/Splatt/Splatt.vcxproj.filters
+++ b/Splatt/Splatt.vcxproj.filters
@@ -93,11 +93,26 @@
     <ClCompile Include="Aste_Shoot.cpp">
       <Filter>Fichiers sources\Asteroid</Filter>
     </ClCompile>
-    <ClCompile Include="Lunar_manager.cpp">
+	    <ClCompile Include="Lunar_manager.cpp">
       <Filter>Fichiers sources\Lunar Lander</Filter>
     </ClCompile>
     <ClCompile Include="Lunar_player.cpp">
       <Filter>Fichiers sources\Lunar Lander</Filter>
+	</ClCompile>
+    <ClCompile Include="Pac_Personnage.cpp">
+      <Filter>Fichiers sources\PacMan</Filter>
+    </ClCompile>
+    <ClCompile Include="Perso_Pacman.cpp">
+      <Filter>Fichiers sources\PacMan</Filter>
+    </ClCompile>
+    <ClCompile Include="Pac_Fantomes.cpp">
+      <Filter>Fichiers sources\PacMan</Filter>
+    </ClCompile>
+    <ClCompile Include="Pac_Bonus.cpp">
+      <Filter>Fichiers sources\PacMan</Filter>
+    </ClCompile>
+    <ClCompile Include="Pac_Gum.cpp">
+      <Filter>Fichiers sources\PacMan</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -131,11 +146,26 @@
     <ClInclude Include="pch.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
-    <ClInclude Include="Lunar_player.h">
+	    <ClInclude Include="Lunar_player.h">
       <Filter>Fichiers d%27en-tête\Lunar Lander</Filter>
     </ClInclude>
     <ClInclude Include="Lunar_manager.h">
       <Filter>Fichiers d%27en-tête\Lunar Lander</Filter>
+    </ClInclude>
+    <ClInclude Include="Pac_Personnage.h">
+      <Filter>Fichiers d%27en-tête\PacMan</Filter>
+    </ClInclude>
+    <ClInclude Include="Perso_Pacman.h">
+      <Filter>Fichiers d%27en-tête\PacMan</Filter>
+    </ClInclude>
+    <ClInclude Include="Pac_Fantomes.h">
+      <Filter>Fichiers d%27en-tête\PacMan</Filter>
+    </ClInclude>
+    <ClInclude Include="Pac_Bonus.h">
+      <Filter>Fichiers d%27en-tête\PacMan</Filter>
+    </ClInclude>
+    <ClInclude Include="Pac_Gum.h">
+      <Filter>Fichiers d%27en-tête\PacMan</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
