--- a/Splatt/Splatt.vcxproj
+++ b/Splatt/Splatt.vcxproj
@@ -167,14 +167,17 @@
     <ClCompile Include="Aste_Shoot.cpp" />
     <ClCompile Include="Aste_SmallSaucer.cpp" />
     <ClCompile Include="Main.cpp" />
-	<ClCompile Include="Lunar_manager.cpp" />
+    <ClCompile Include="Lunar_manager.cpp" />
     <ClCompile Include="Lunar_player.cpp" />
     <ClCompile Include="Pac_Bonus.cpp" />
     <ClCompile Include="Pac_Fantomes.cpp" />
     <ClCompile Include="Pac_Gum.cpp" />
     <ClCompile Include="Pac_Personnage.cpp" />
     <ClCompile Include="Perso_Pacman.cpp" />
+    <ClCompile Include="RessourcesManager.cpp" />
+    <ClCompile Include="SoundManager.cpp" />
     <ClCompile Include="StateManager.cpp" />
+    <ClCompile Include="Texture_SpriteManager.cpp" />
     <ClCompile Include="Tools.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -185,7 +188,7 @@
     <ClInclude Include="Aste_Player.h" />
     <ClInclude Include="Aste_Shoot.h" />
     <ClInclude Include="Aste_SmallSaucer.h" />
-	<ClInclude Include="Lunar_manager.h" />
+    <ClInclude Include="Lunar_manager.h" />
     <ClInclude Include="Lunar_player.h" />
     <ClInclude Include="Pac_Bonus.h" />
     <ClInclude Include="Pac_Fantomes.h" />
@@ -193,7 +196,10 @@
     <ClInclude Include="Pac_Personnage.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Perso_Pacman.h" />
+    <ClInclude Include="RessourcesManager.hpp" />
+    <ClInclude Include="SoundManager.hpp" />
     <ClInclude Include="StateManager.hpp" />
+    <ClInclude Include="Texture_SpriteManager.hpp" />
     <ClInclude Include="Tools.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
