--- a/Splatt/Splatt.vcxproj.filters
+++ b/Splatt/Splatt.vcxproj.filters
@@ -93,12 +93,12 @@
     <ClCompile Include="Aste_Shoot.cpp">
       <Filter>Fichiers sources\Asteroid</Filter>
     </ClCompile>
-	    <ClCompile Include="Lunar_manager.cpp">
+    <ClCompile Include="Lunar_manager.cpp">
       <Filter>Fichiers sources\Lunar Lander</Filter>
     </ClCompile>
     <ClCompile Include="Lunar_player.cpp">
       <Filter>Fichiers sources\Lunar Lander</Filter>
-	</ClCompile>
+    </ClCompile>
     <ClCompile Include="Pac_Personnage.cpp">
       <Filter>Fichiers sources\PacMan</Filter>
     </ClCompile>
@@ -113,6 +113,15 @@
     </ClCompile>
     <ClCompile Include="Pac_Gum.cpp">
       <Filter>Fichiers sources\PacMan</Filter>
+    </ClCompile>
+    <ClCompile Include="RessourcesManager.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
+    <ClCompile Include="SoundManager.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
+    <ClCompile Include="Texture_SpriteManager.cpp">
+      <Filter>Fichiers sources</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -146,7 +155,7 @@
     <ClInclude Include="pch.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
-	    <ClInclude Include="Lunar_player.h">
+    <ClInclude Include="Lunar_player.h">
       <Filter>Fichiers d%27en-tête\Lunar Lander</Filter>
     </ClInclude>
     <ClInclude Include="Lunar_manager.h">
@@ -166,6 +175,15 @@
     </ClInclude>
     <ClInclude Include="Pac_Gum.h">
       <Filter>Fichiers d%27en-tête\PacMan</Filter>
+    </ClInclude>
+    <ClInclude Include="SoundManager.hpp">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="RessourcesManager.hpp">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="Texture_SpriteManager.hpp">
+      <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
