--- a/Splatt/Splatt.vcxproj
+++ b/Splatt/Splatt.vcxproj
@@ -166,6 +166,7 @@
     <ClCompile Include="Aste_Player.cpp" />
     <ClCompile Include="Aste_Shoot.cpp" />
     <ClCompile Include="Aste_SmallSaucer.cpp" />
+    <ClCompile Include="lunar_landingZone.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Lunar_manager.cpp" />
     <ClCompile Include="Lunar_player.cpp" />
@@ -188,6 +189,7 @@
     <ClInclude Include="Aste_Player.h" />
     <ClInclude Include="Aste_Shoot.h" />
     <ClInclude Include="Aste_SmallSaucer.h" />
+    <ClInclude Include="lunar_landingZone.h" />
     <ClInclude Include="Lunar_manager.h" />
     <ClInclude Include="Lunar_player.h" />
     <ClInclude Include="Pac_Bonus.h" />
