--- a/Splatt/Splatt.vcxproj.filters
+++ b/Splatt/Splatt.vcxproj.filters
@@ -126,6 +126,18 @@
     <ClCompile Include="lunar_landingZone.cpp">
       <Filter>Fichiers sources\Lunar Lander</Filter>
     </ClCompile>
+    <ClCompile Include="Si_Ennemi.cpp">
+      <Filter>Fichiers sources\Space Invader</Filter>
+    </ClCompile>
+    <ClCompile Include="SI_Joueur.cpp">
+      <Filter>Fichiers sources\Space Invader</Filter>
+    </ClCompile>
+    <ClCompile Include="SI_Perso.cpp">
+      <Filter>Fichiers sources\Space Invader</Filter>
+    </ClCompile>
+    <ClCompile Include="SI_Tir.cpp">
+      <Filter>Fichiers sources\Space Invader</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="StateManager.hpp">
@@ -190,6 +202,18 @@
     </ClInclude>
     <ClInclude Include="lunar_landingZone.h">
       <Filter>Fichiers d%27en-tête\Lunar Lander</Filter>
+    </ClInclude>
+    <ClInclude Include="SI_Tir.h">
+      <Filter>Fichiers d%27en-tête\Space Invader</Filter>
+    </ClInclude>
+    <ClInclude Include="Si_Ennemi.h">
+      <Filter>Fichiers d%27en-tête\Space Invader</Filter>
+    </ClInclude>
+    <ClInclude Include="SI_Joueur.h">
+      <Filter>Fichiers d%27en-tête\Space Invader</Filter>
+    </ClInclude>
+    <ClInclude Include="SI_Perso.h">
+      <Filter>Fichiers d%27en-tête\Space Invader</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
