--- a/Splatt/Splatt.vcxproj.filters
+++ b/Splatt/Splatt.vcxproj.filters
@@ -61,6 +61,12 @@
     <Filter Include="Fichiers sources\Tron">
       <UniqueIdentifier>{69762c6f-3c5c-4b46-95a1-56feab009d0d}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Fichiers d%27en-tête\Space Invader\Ennemis">
+      <UniqueIdentifier>{5177b8b2-a208-4f4b-add5-06ad2658f714}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Fichiers sources\Space Invader\Ennemis">
+      <UniqueIdentifier>{b36d5e73-b8f6-4c7c-9270-7961891ff24a}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -126,9 +132,6 @@
     <ClCompile Include="lunar_landingZone.cpp">
       <Filter>Fichiers sources\Lunar Lander</Filter>
     </ClCompile>
-    <ClCompile Include="Si_Ennemi.cpp">
-      <Filter>Fichiers sources\Space Invader</Filter>
-    </ClCompile>
     <ClCompile Include="SI_Joueur.cpp">
       <Filter>Fichiers sources\Space Invader</Filter>
     </ClCompile>
@@ -161,6 +164,9 @@
     </ClCompile>
     <ClCompile Include="Tetris_Block.cpp">
       <Filter>Fichiers sources\Tetris</Filter>
+    </ClCompile>
+    <ClCompile Include="Si_Ennemi.cpp">
+      <Filter>Fichiers sources\Space Invader\Ennemis</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -230,9 +236,6 @@
     <ClInclude Include="SI_Tir.h">
       <Filter>Fichiers d%27en-tête\Space Invader</Filter>
     </ClInclude>
-    <ClInclude Include="Si_Ennemi.h">
-      <Filter>Fichiers d%27en-tête\Space Invader</Filter>
-    </ClInclude>
     <ClInclude Include="SI_Joueur.h">
       <Filter>Fichiers d%27en-tête\Space Invader</Filter>
     </ClInclude>
@@ -262,6 +265,9 @@
     </ClInclude>
     <ClInclude Include="Tetris_Block.h">
       <Filter>Fichiers d%27en-tête\Tetris</Filter>
+    </ClInclude>
+    <ClInclude Include="Si_Ennemi.h">
+      <Filter>Fichiers d%27en-tête\Space Invader\Ennemis</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
