--- a/Splatt/Splatt.vcxproj.filters
+++ b/Splatt/Splatt.vcxproj.filters
@@ -1,10 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Fichiers sources">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
     <Filter Include="Fichiers d%27en-tête">
       <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
       <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
@@ -12,27 +8,6 @@
     <Filter Include="Fichiers de ressources">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
-    </Filter>
-    <Filter Include="Fichiers sources\Menu">
-      <UniqueIdentifier>{50384bea-8f6e-448e-b68b-2e163d279a3d}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Fichiers sources\Asteroid">
-      <UniqueIdentifier>{3d1032b2-7cf4-49bb-8d42-b439de103b68}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Fichiers sources\Lunar Lander">
-      <UniqueIdentifier>{decced34-78de-43a6-95ed-9fee98dae8af}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Fichiers sources\PacMan">
-      <UniqueIdentifier>{09c5663d-274c-4e80-90d7-b604fd3329e0}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Fichiers sources\Space Invader">
-      <UniqueIdentifier>{0d79687f-9da8-4c0a-a63f-45a4572952a1}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Fichiers sources\Tetris">
-      <UniqueIdentifier>{03ccd7eb-1a6e-4845-a82b-a28af9448735}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Fichiers sources\Tron">
-      <UniqueIdentifier>{69762c6f-3c5c-4b46-95a1-56feab009d0d}</UniqueIdentifier>
     </Filter>
     <Filter Include="Fichiers d%27en-tête\Menu">
       <UniqueIdentifier>{1cf8b976-7a6a-4eb9-b19b-8f4aba1e13c3}</UniqueIdentifier>
@@ -58,8 +33,33 @@
     <Filter Include="Fichiers d%27en-tête\Asteroid\Aste_Enemies">
       <UniqueIdentifier>{7fa2f481-5a88-4b65-b62d-0d106bf9dcd3}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Fichiers sources">
+      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
+      <Extensions>cpp;c;cc;cxx;c++;def;odl;idl;hpj;bat;asm;asmx</Extensions>
+    </Filter>
+    <Filter Include="Fichiers sources\Menu">
+      <UniqueIdentifier>{50384bea-8f6e-448e-b68b-2e163d279a3d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Fichiers sources\Asteroid">
+      <UniqueIdentifier>{3d1032b2-7cf4-49bb-8d42-b439de103b68}</UniqueIdentifier>
+    </Filter>
     <Filter Include="Fichiers sources\Asteroid\Aste_Enemies">
       <UniqueIdentifier>{67ca7a77-0754-4049-86cb-39a44c525a41}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Fichiers sources\Lunar Lander">
+      <UniqueIdentifier>{decced34-78de-43a6-95ed-9fee98dae8af}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Fichiers sources\PacMan">
+      <UniqueIdentifier>{09c5663d-274c-4e80-90d7-b604fd3329e0}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Fichiers sources\Space Invader">
+      <UniqueIdentifier>{0d79687f-9da8-4c0a-a63f-45a4572952a1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Fichiers sources\Tetris">
+      <UniqueIdentifier>{03ccd7eb-1a6e-4845-a82b-a28af9448735}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Fichiers sources\Tron">
+      <UniqueIdentifier>{69762c6f-3c5c-4b46-95a1-56feab009d0d}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -144,6 +144,24 @@
     <ClCompile Include="Lunar_GroundContainer.cpp">
       <Filter>Fichiers sources\Lunar Lander</Filter>
     </ClCompile>
+    <ClCompile Include="Tetris_Score.cpp">
+      <Filter>Fichiers sources\Tetris</Filter>
+    </ClCompile>
+    <ClCompile Include="Tetris_Program.cpp">
+      <Filter>Fichiers sources\Tetris</Filter>
+    </ClCompile>
+    <ClCompile Include="Tetris_player.cpp">
+      <Filter>Fichiers sources\Tetris</Filter>
+    </ClCompile>
+    <ClCompile Include="Tetris_Menu.cpp">
+      <Filter>Fichiers sources\Tetris</Filter>
+    </ClCompile>
+    <ClCompile Include="Tetris_Manager.cpp">
+      <Filter>Fichiers sources\Tetris</Filter>
+    </ClCompile>
+    <ClCompile Include="Tetris_Block.cpp">
+      <Filter>Fichiers sources\Tetris</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="StateManager.hpp">
@@ -226,6 +244,24 @@
     </ClInclude>
     <ClInclude Include="Lunar_GroundContainer.h">
       <Filter>Fichiers d%27en-tête\Lunar Lander</Filter>
+    </ClInclude>
+    <ClInclude Include="Tetris_Manager.h">
+      <Filter>Fichiers sources</Filter>
+    </ClInclude>
+    <ClInclude Include="Tetris_Score.h">
+      <Filter>Fichiers d%27en-tête\Tetris</Filter>
+    </ClInclude>
+    <ClInclude Include="Tetris_Program.h">
+      <Filter>Fichiers d%27en-tête\Tetris</Filter>
+    </ClInclude>
+    <ClInclude Include="Tetris_player.h">
+      <Filter>Fichiers d%27en-tête\Tetris</Filter>
+    </ClInclude>
+    <ClInclude Include="Tetris_Menu.h">
+      <Filter>Fichiers d%27en-tête\Tetris</Filter>
+    </ClInclude>
+    <ClInclude Include="Tetris_Block.h">
+      <Filter>Fichiers d%27en-tête\Tetris</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
