--- a/Splatt/Splatt.vcxproj
+++ b/Splatt/Splatt.vcxproj
@@ -179,9 +179,9 @@
     <ClCompile Include="Pac_Personnage.cpp" />
     <ClCompile Include="Perso_Pacman.cpp" />
     <ClCompile Include="RessourcesManager.cpp" />
-    <ClCompile Include="Si_Ennemi.cpp" />
+    <ClCompile Include="SI_Ennemi.cpp" />
     <ClCompile Include="SI_Joueur.cpp" />
-    <ClCompile Include="Si_Manager.cpp" />
+    <ClCompile Include="SI_Manager.cpp" />
     <ClCompile Include="SI_Perso.cpp" />
     <ClCompile Include="SI_Tir.cpp" />
     <ClCompile Include="SoundManager.cpp" />
@@ -216,9 +216,9 @@
     <ClInclude Include="pch.h" />
     <ClInclude Include="Perso_Pacman.h" />
     <ClInclude Include="RessourcesManager.hpp" />
-    <ClInclude Include="Si_Ennemi.h" />
+    <ClInclude Include="SI_Ennemi.h" />
     <ClInclude Include="SI_Joueur.h" />
-    <ClInclude Include="Si_Manager.h" />
+    <ClInclude Include="SI_Manager.h" />
     <ClInclude Include="SI_Perso.h" />
     <ClInclude Include="SI_Tir.h" />
     <ClInclude Include="SoundManager.hpp" />
