--- a/Splatt/Splatt.vcxproj.filters
+++ b/Splatt/Splatt.vcxproj.filters
@@ -174,6 +174,9 @@
     <ClCompile Include="Lunar_stone.cpp">
       <Filter>Fichiers sources\Lunar Lander</Filter>
     </ClCompile>
+    <ClCompile Include="Pac_Manager.cpp">
+      <Filter>Fichiers sources\PacMan</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="StateManager.hpp">
@@ -280,6 +283,9 @@
     </ClInclude>
     <ClInclude Include="SI_Ennemi.h">
       <Filter>Fichiers d%27en-tête\Space Invader\Ennemis</Filter>
+    </ClInclude>
+    <ClInclude Include="Pac_Manager.h">
+      <Filter>Fichiers d%27en-tête\PacMan</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
