shader, reset / score board , player sprite

--- a/Splatt/Splatt.vcxproj
+++ b/Splatt/Splatt.vcxproj
@@ -162,6 +162,8 @@
     <ClCompile Include="Aste_Asteroid.cpp" />
     <ClCompile Include="Aste_BigSaucer.cpp" />
     <ClCompile Include="Aste_Enemies.cpp" />
+    <ClCompile Include="Aste_Explosion.cpp" />
+    <ClCompile Include="Aste_Lights.cpp" />
     <ClCompile Include="Aste_Manager.cpp" />
     <ClCompile Include="Aste_Player.cpp" />
     <ClCompile Include="Aste_Shoot.cpp" />
@@ -200,6 +202,8 @@
     <ClInclude Include="Aste_Asteroid.h" />
     <ClInclude Include="Aste_BigSaucer.h" />
     <ClInclude Include="Aste_Enemies.h" />
+    <ClInclude Include="Aste_Explosion.h" />
+    <ClInclude Include="Aste_Lights.h" />
     <ClInclude Include="Aste_Manager.h" />
     <ClInclude Include="Aste_Player.h" />
     <ClInclude Include="Aste_Shoot.h" />
