--- a/Splatt/Splatt.vcxproj
+++ b/Splatt/Splatt.vcxproj
@@ -174,6 +174,7 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Lunar_manager.cpp" />
     <ClCompile Include="Lunar_player.cpp" />
+    <ClCompile Include="MenuManager.cpp" />
     <ClCompile Include="Pac_Bonus.cpp" />
     <ClCompile Include="Pac_Fantomes.cpp" />
     <ClCompile Include="Pac_Gum.cpp" />
@@ -216,6 +217,7 @@
     <ClInclude Include="Lunar_GroundContainer.h" />
     <ClInclude Include="Lunar_manager.h" />
     <ClInclude Include="Lunar_player.h" />
+    <ClInclude Include="MenuManager.h" />
     <ClInclude Include="Pac_Bonus.h" />
     <ClInclude Include="Pac_Fantomes.h" />
     <ClInclude Include="Pac_Gum.h" />
